--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "189adee5",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "f02ad473",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"supertuxkart/flattened-v0\", render_mode=None, agent=pystk2_gymnasium.AgentSpec(use_ai=False, name=\"Lucie\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "318d54ba",
+   "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'continuous': array([ 6.7002422e-01,  2.9549137e-01,  1.7503587e+00,  8.9941913e-01,\n",
+       "        -1.4632571e-01,  1.3905811e+00, -2.1703941e-01,  5.2790987e-01,\n",
+       "        -4.9435088e-01, -4.4784805e-01,  1.6168687e-02, -1.1237829e+00,\n",
+       "        -1.3367431e-01,  1.1882008e+00,  4.5194694e-01, -1.3220693e-01,\n",
+       "        -1.1018231e+00, -3.6865831e-03, -4.4989294e-01,  1.7370255e+00,\n",
+       "         1.9526787e+00,  1.1092412e+00,  8.4148091e-01, -6.9856012e-01,\n",
+       "         4.2922747e-01,  5.7056230e-01,  6.6962641e-01,  1.6738253e+00,\n",
+       "         1.3670188e+00,  2.6036257e-01,  9.0406865e-01, -7.2445768e-01,\n",
+       "         5.1013058e-01, -1.1557199e+00,  9.4089741e-01, -1.2770027e+00,\n",
+       "        -1.1648952e+00, -5.7613051e-01,  8.4522861e-01, -1.3086022e-01,\n",
+       "         7.6480502e-01, -2.9509938e-01,  3.1925123e+00,  1.1997459e+00,\n",
+       "         1.7165543e-01,  9.6674375e-02,  2.3204651e+00,  1.9985761e-01,\n",
+       "         1.8428458e+00,  1.5052551e-01,  6.6466933e-01,  1.7809205e-01,\n",
+       "        -7.5876278e-01, -1.0886252e+00,  2.1027410e-01,  2.0656395e-01,\n",
+       "         5.2421451e-01, -7.6949149e-01, -2.9998419e-01, -7.7700949e-01,\n",
+       "        -7.8068194e-03, -2.4526779e-01, -3.9159709e-01,  3.6991459e-01,\n",
+       "         1.4418733e+00,  1.3691771e+00, -2.1065001e+00,  8.7512499e-01,\n",
+       "         4.9006736e-01, -6.2953871e-01,  2.2894329e-01,  1.1341362e+00,\n",
+       "         5.0969661e-04,  5.4033782e-02,  4.5143101e-01, -2.0466182e-01,\n",
+       "        -7.3350787e-01,  3.8216031e-01,  1.2880107e+00,  3.0598706e-01,\n",
+       "        -1.4505688e+00, -1.4732676e+00,  6.5508235e-01,  2.7883115e-01,\n",
+       "         2.1839455e-01,  5.7619953e-01,  4.6267319e+00,  1.2486377e+00,\n",
+       "         8.4501088e-02,  3.7934723e-01,  9.0751165e-01,  7.7433419e-01],\n",
+       "       dtype=float32),\n",
+       " 'discrete': array([6, 4, 5, 4, 5, 0, 0, 2, 2])}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "27100f93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'continuous': array([0.5098651, 0.3222888], dtype=float32),\n",
+       " 'discrete': array([1, 0, 1, 1, 1])}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "df4b6a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..:: Antarctica Rendering Engine 2.0 ::..\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -26,13 +110,13 @@
     }
    ],
    "source": [
-    "env = gym.make(\"supertuxkart/flattened-v0\", render_mode=None, agent=pystk2_gymnasium.AgentSpec(use_ai=False, name=\"Lucie\"))"
+    "env = gym.make(\"supertuxkart/flattened_multidiscrete-v0\", render_mode=None, agent=pystk2_gymnasium.AgentSpec(use_ai=False, name=\"Lucie\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "318d54ba",
+   "execution_count": 43,
+   "id": "3d4a213a",
    "metadata": {},
    "outputs": [
     {
@@ -52,34 +136,71 @@
        " inf inf], (92,), float32), 'discrete': MultiDiscrete([10  7  7  7  7  7  2  4 11]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.observation_space.sample()"
+    "env.observation_space\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27100f93",
+   "execution_count": 44,
+   "id": "5836d9e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dict('continuous': Box([ 0. -1.], 1.0, (2,), float32), 'discrete': MultiDiscrete([2 2 2 2 2]))"
+       "MultiDiscrete([5 2 2 2 2 2 7])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.action_space.sample()"
+    "env.action_space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a31eb61",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FlattenerWrapper' object has no attribute 'observation_spec'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mobservation_spec:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43menv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobservation_spec\u001b[49m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mreward_spec:\u001b[39m\u001b[33m\"\u001b[39m, env.reward_spec)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33minput_spec:\u001b[39m\u001b[33m\"\u001b[39m, env.input_spec)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'FlattenerWrapper' object has no attribute 'observation_spec'"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(\"observation_spec:\", env.observation_spec)\n",
+    "except:\n",
+    "    pass\n",
+    "try:\n",
+    "    print(\"reward_spec:\", env.reward_spec)\n",
+    "except:\n",
+    "    pass\n",
+    "try:\n",
+    "    print(\"input_spec:\", env.input_spec)\n",
+    "except:\n",
+    "    pass\n",
+    "try:\n",
+    "    print(\"action_spec (as defined by input_spec):\", env.action_spec)\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
