--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "189adee5",
    "metadata": {},
    "outputs": [],
@@ -13,94 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "f02ad473",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = gym.make(\"supertuxkart/flattened-v0\", render_mode=None, agent=pystk2_gymnasium.AgentSpec(use_ai=False, name=\"Lucie\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "318d54ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'continuous': array([ 6.7002422e-01,  2.9549137e-01,  1.7503587e+00,  8.9941913e-01,\n",
-       "        -1.4632571e-01,  1.3905811e+00, -2.1703941e-01,  5.2790987e-01,\n",
-       "        -4.9435088e-01, -4.4784805e-01,  1.6168687e-02, -1.1237829e+00,\n",
-       "        -1.3367431e-01,  1.1882008e+00,  4.5194694e-01, -1.3220693e-01,\n",
-       "        -1.1018231e+00, -3.6865831e-03, -4.4989294e-01,  1.7370255e+00,\n",
-       "         1.9526787e+00,  1.1092412e+00,  8.4148091e-01, -6.9856012e-01,\n",
-       "         4.2922747e-01,  5.7056230e-01,  6.6962641e-01,  1.6738253e+00,\n",
-       "         1.3670188e+00,  2.6036257e-01,  9.0406865e-01, -7.2445768e-01,\n",
-       "         5.1013058e-01, -1.1557199e+00,  9.4089741e-01, -1.2770027e+00,\n",
-       "        -1.1648952e+00, -5.7613051e-01,  8.4522861e-01, -1.3086022e-01,\n",
-       "         7.6480502e-01, -2.9509938e-01,  3.1925123e+00,  1.1997459e+00,\n",
-       "         1.7165543e-01,  9.6674375e-02,  2.3204651e+00,  1.9985761e-01,\n",
-       "         1.8428458e+00,  1.5052551e-01,  6.6466933e-01,  1.7809205e-01,\n",
-       "        -7.5876278e-01, -1.0886252e+00,  2.1027410e-01,  2.0656395e-01,\n",
-       "         5.2421451e-01, -7.6949149e-01, -2.9998419e-01, -7.7700949e-01,\n",
-       "        -7.8068194e-03, -2.4526779e-01, -3.9159709e-01,  3.6991459e-01,\n",
-       "         1.4418733e+00,  1.3691771e+00, -2.1065001e+00,  8.7512499e-01,\n",
-       "         4.9006736e-01, -6.2953871e-01,  2.2894329e-01,  1.1341362e+00,\n",
-       "         5.0969661e-04,  5.4033782e-02,  4.5143101e-01, -2.0466182e-01,\n",
-       "        -7.3350787e-01,  3.8216031e-01,  1.2880107e+00,  3.0598706e-01,\n",
-       "        -1.4505688e+00, -1.4732676e+00,  6.5508235e-01,  2.7883115e-01,\n",
-       "         2.1839455e-01,  5.7619953e-01,  4.6267319e+00,  1.2486377e+00,\n",
-       "         8.4501088e-02,  3.7934723e-01,  9.0751165e-01,  7.7433419e-01],\n",
-       "       dtype=float32),\n",
-       " 'discrete': array([6, 4, 5, 4, 5, 0, 0, 2, 2])}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.observation_space.sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "27100f93",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'continuous': array([0.5098651, 0.3222888], dtype=float32),\n",
-       " 'discrete': array([1, 0, 1, 1, 1])}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.action_space.sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "df4b6a05",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "..:: Antarctica Rendering Engine 2.0 ::..\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -115,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "3d4a213a",
    "metadata": {},
    "outputs": [
@@ -136,7 +52,7 @@
        " inf inf], (92,), float32), 'discrete': MultiDiscrete([10  7  7  7  7  7  2  4 11]))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +63,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
+   "id": "2337ade4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'continuous': array([ 0.04913291,  0.18592903, -0.13750568, -2.1664863 , -1.3369802 ,\n",
+       "        -1.2673594 ,  1.064537  ,  0.50301355, -0.07392543, -1.0648874 ,\n",
+       "         0.59978586, -0.3260699 , -0.28368995, -0.3129714 , -0.7865106 ,\n",
+       "         1.0156497 ,  0.4866303 , -1.0372599 , -0.7568364 , -0.5211505 ,\n",
+       "         1.9376823 , -0.7359149 ,  1.0307062 ,  0.38445485,  1.0427644 ,\n",
+       "        -0.37560287,  0.408719  ,  0.50662357, -1.9307307 ,  0.4348792 ,\n",
+       "         0.5748243 , -0.81352335, -0.6539933 ,  0.8598773 ,  0.98470116,\n",
+       "         1.0593983 , -1.9472166 , -0.86159766, -0.40108663, -2.1552079 ,\n",
+       "        -2.1092086 ,  0.6864105 ,  0.45305264,  0.40409902,  3.0445766 ,\n",
+       "         0.87412935,  0.37029693,  1.4202343 ,  0.14795017,  0.9295268 ,\n",
+       "         0.32523933,  1.1591398 , -0.38850686,  0.5556316 ,  0.70932853,\n",
+       "         1.7893687 ,  1.2881277 ,  1.5645255 ,  0.35663235, -0.49738735,\n",
+       "         1.1765896 ,  0.524551  ,  0.7818546 ,  0.38701123,  1.2510463 ,\n",
+       "         1.6446042 ,  0.85302174,  0.13573356, -0.21092333, -0.31525493,\n",
+       "        -0.11028261, -0.5662071 ,  0.65334994, -0.03526413,  0.74475676,\n",
+       "        -1.0953368 , -1.3970815 ,  1.329854  ,  0.6624864 ,  1.301431  ,\n",
+       "        -0.35032672, -1.1480967 ,  0.4908715 ,  0.3002343 ,  0.44890103,\n",
+       "         1.4818319 ,  0.38761747,  0.37569538,  1.7803451 , -0.8816671 ,\n",
+       "         0.5798564 , -0.11917368], dtype=float32),\n",
+       " 'discrete': array([7, 1, 2, 2, 1, 1, 1, 2, 0])}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "5836d9e9",
    "metadata": {},
    "outputs": [
@@ -157,7 +113,7 @@
        "MultiDiscrete([5 2 2 2 2 2 7])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,39 +124,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a31eb61",
+   "execution_count": 6,
+   "id": "e8960c1c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FlattenerWrapper' object has no attribute 'observation_spec'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mobservation_spec:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43menv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mobservation_spec\u001b[49m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mreward_spec:\u001b[39m\u001b[33m\"\u001b[39m, env.reward_spec)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33minput_spec:\u001b[39m\u001b[33m\"\u001b[39m, env.input_spec)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'FlattenerWrapper' object has no attribute 'observation_spec'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rya/.venvs/deepdac/lib/python3.11/site-packages/torchrl/__init__.py:48: UserWarning: failed to set start method to spawn, and current start method for mp is fork.\n",
+      "  warn(\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    print(\"observation_spec:\", env.observation_spec)\n",
-    "except:\n",
-    "    pass\n",
-    "try:\n",
-    "    print(\"reward_spec:\", env.reward_spec)\n",
-    "except:\n",
-    "    pass\n",
-    "try:\n",
-    "    print(\"input_spec:\", env.input_spec)\n",
-    "except:\n",
-    "    pass\n",
-    "try:\n",
-    "    print(\"action_spec (as defined by input_spec):\", env.action_spec)\n",
-    "except:\n",
-    "    pass"
+    "from torchrl.envs import GymEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dfa55a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GymEnv(env=supertuxkart/flattened_multidiscrete-v0, batch_size=torch.Size([]), device=None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..:: Antarctica Rendering Engine 2.0 ::..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = GymEnv(\"supertuxkart/flattened_multidiscrete-v0\", render_mode=None, agent=pystk2_gymnasium.AgentSpec(use_ai=False, name=\"Lucie\"))\n",
+    "env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef131ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env.specs['input_spec']=Composite(\n",
+      "    full_state_spec: Composite(device=None, shape=torch.Size([]), data_cls=None),\n",
+      "    full_action_spec: Composite(\n",
+      "        action: MultiOneHot(\n",
+      "            shape=torch.Size([22]),\n",
+      "            space=BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)]),\n",
+      "            device=cpu,\n",
+      "            dtype=torch.int64,\n",
+      "            domain=discrete),\n",
+      "        device=None,\n",
+      "        shape=torch.Size([]),\n",
+      "        data_cls=None),\n",
+      "    device=None,\n",
+      "    shape=torch.Size([]),\n",
+      "    data_cls=None)\n",
+      "env.action_spec=MultiOneHot(\n",
+      "    shape=torch.Size([22]),\n",
+      "    space=BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)]),\n",
+      "    device=cpu,\n",
+      "    dtype=torch.int64,\n",
+      "    domain=discrete)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{env.specs['input_spec']['full_action_spec']['action']=}\")\n",
+    "# print(f\"{env.observation_spec=}\")\n",
+    "# print(f\"{env.observation_spec.keys()=}\")\n",
+    "# print(f\"{env.observation_spec['continuous']=}\")\n",
+    "# print(f\"{env.observation_spec=}\")\n",
+    "print(f\"{env.action_spec=}\")\n",
+    "# print(f\"{env.reward_spec=}\")\n",
+    "# print(f\"{env.input_spec=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8908e0c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key='continuous'\n",
+      "spec=BoundedContinuous(\n",
+      "    shape=torch.Size([92]),\n",
+      "    space=ContinuousBox(\n",
+      "        low=Tensor(shape=torch.Size([92]), device=cpu, dtype=torch.float32, contiguous=True),\n",
+      "        high=Tensor(shape=torch.Size([92]), device=cpu, dtype=torch.float32, contiguous=True)),\n",
+      "    device=cpu,\n",
+      "    dtype=torch.float32,\n",
+      "    domain=continuous)\n",
+      "spec.shape=torch.Size([92])\n",
+      "key='discrete'\n",
+      "spec=MultiOneHot(\n",
+      "    shape=torch.Size([62]),\n",
+      "    space=BoxList(boxes=[CategoricalBox(n=10), CategoricalBox(n=7), CategoricalBox(n=7), CategoricalBox(n=7), CategoricalBox(n=7), CategoricalBox(n=7), CategoricalBox(n=2), CategoricalBox(n=4), CategoricalBox(n=11)]),\n",
+      "    device=cpu,\n",
+      "    dtype=torch.int64,\n",
+      "    domain=discrete)\n",
+      "spec.shape=torch.Size([62])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "154"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_observation_vector_dim(env_spec):\n",
+    "    \"\"\"\n",
+    "    Calculate the dimension of the flattened observation vector after processing.\n",
+    "    - Continuous observations: kept as-is\n",
+    "    - Discrete observations (MultiOneHot): already one-hot encoded, kept as-is\n",
+    "\n",
+    "    Args:\n",
+    "        env_spec: Environment spec (from env.specs)\n",
+    "\n",
+    "    Returns:\n",
+    "        int: Total dimension of the processed observation vector\n",
+    "    \"\"\"\n",
+    "    # Handle if passed full env spec or just observation spec\n",
+    "    obs_spec = env_spec[\"output_spec\"][\"full_observation_spec\"]\n",
+    "    total_dim = 0\n",
+    "\n",
+    "    # Handle composite observation spaces\n",
+    "    for key in obs_spec.keys():\n",
+    "        spec = obs_spec[key]\n",
+    "        # Each component contributes its flattened shape\n",
+    "        print(f\"{key=}\")\n",
+    "        print(f\"{spec=}\")\n",
+    "        print(f\"{spec.shape=}\")\n",
+    "        total_dim += spec.shape.numel()\n",
+    "\n",
+    "    return total_dim\n",
+    "\n",
+    "get_observation_vector_dim(env.specs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "97728d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 2, 2, 2, 2, 2, 7]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_action_vector_dims(env_specs):\n",
+    "    \"\"\"\n",
+    "    Calculate the dimension of the multiple actions of the env.\n",
+    "    env actions are assumed to be MultiDiscrete, meaning action is multionehot\n",
+    "\n",
+    "    Args:\n",
+    "        env_spec: Environment spec (from env.specs)\n",
+    "\n",
+    "    Returns:\n",
+    "        Sequence[int]: dimensions of the actions vectors\n",
+    "    \"\"\"\n",
+    "    # Handle if passed full env spec or just observation spec\n",
+    "    act_spec = env_specs[\"input_spec\"][\"full_action_spec\"][\"action\"]\n",
+    "    print(f\"{act_spec.space}\")\n",
+    "\n",
+    "    return [box.n for box in act_spec.space]\n",
+    "\n",
+    "get_action_vector_dims(env.specs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4350e1f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unsupported action spec type: <class 'torchrl.data.tensor_specs.Composite'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m     action_dims = action_spec.nvec.tolist()\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnsupported action spec type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(action_spec)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Unsupported action spec type: <class 'torchrl.data.tensor_specs.Composite'>"
+     ]
+    }
+   ],
+   "source": [
+    "env_spec = env.specs\n",
+    "action_spec = env_spec.get(\"action\", env_spec) if hasattr(env_spec, 'get') else env_spec\n",
+    "    \n",
+    "# For MultiDiscrete, extract the number of categories for each discrete action\n",
+    "if hasattr(action_spec, 'space') and hasattr(action_spec.space, 'boxes'):\n",
+    "    # MultiOneHot or MultiDiscrete with BoxList\n",
+    "    action_dims = [box.n for box in action_spec.space.boxes]\n",
+    "elif hasattr(action_spec, 'nvec'):\n",
+    "    # Standard MultiDiscrete\n",
+    "    action_dims = action_spec.nvec.tolist()\n",
+    "else:\n",
+    "    raise ValueError(f\"Unsupported action spec type: {type(action_spec)}\")"
    ]
   },
   {
