--- a/tests.ipynb
+++ b/tests.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ef131ede",
    "metadata": {},
    "outputs": [
@@ -180,21 +180,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env.specs['input_spec']=Composite(\n",
-      "    full_state_spec: Composite(device=None, shape=torch.Size([]), data_cls=None),\n",
-      "    full_action_spec: Composite(\n",
-      "        action: MultiOneHot(\n",
-      "            shape=torch.Size([22]),\n",
-      "            space=BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)]),\n",
-      "            device=cpu,\n",
-      "            dtype=torch.int64,\n",
-      "            domain=discrete),\n",
-      "        device=None,\n",
-      "        shape=torch.Size([]),\n",
-      "        data_cls=None),\n",
-      "    device=None,\n",
-      "    shape=torch.Size([]),\n",
-      "    data_cls=None)\n",
+      "env.specs['input_spec']['full_action_spec']['action']=MultiOneHot(\n",
+      "    shape=torch.Size([22]),\n",
+      "    space=BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)]),\n",
+      "    device=cpu,\n",
+      "    dtype=torch.int64,\n",
+      "    domain=discrete)\n",
       "env.action_spec=MultiOneHot(\n",
       "    shape=torch.Size([22]),\n",
       "    space=BoxList(boxes=[CategoricalBox(n=5), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=2), CategoricalBox(n=7)]),\n",
@@ -334,35 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4350e1f7",
+   "execution_count": 37,
+   "id": "1acfc3cf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Unsupported action spec type: <class 'torchrl.data.tensor_specs.Composite'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m     action_dims = action_spec.nvec.tolist()\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnsupported action spec type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(action_spec)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: Unsupported action spec type: <class 'torchrl.data.tensor_specs.Composite'>"
-     ]
+     "data": {
+      "text/plain": [
+       "TensorDict(\n",
+       "    fields={\n",
+       "        continuous: Tensor(shape=torch.Size([92]), device=cpu, dtype=torch.float32, is_shared=False),\n",
+       "        discrete: Tensor(shape=torch.Size([62]), device=cpu, dtype=torch.int64, is_shared=False),\n",
+       "        done: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
+       "        terminated: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.bool, is_shared=False),\n",
+       "        truncated: Tensor(shape=torch.Size([1]), device=cpu, dtype=torch.bool, is_shared=False)},\n",
+       "    batch_size=torch.Size([]),\n",
+       "    device=None,\n",
+       "    is_shared=False)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "env_spec = env.specs\n",
-    "action_spec = env_spec.get(\"action\", env_spec) if hasattr(env_spec, 'get') else env_spec\n",
-    "    \n",
-    "# For MultiDiscrete, extract the number of categories for each discrete action\n",
-    "if hasattr(action_spec, 'space') and hasattr(action_spec.space, 'boxes'):\n",
-    "    # MultiOneHot or MultiDiscrete with BoxList\n",
-    "    action_dims = [box.n for box in action_spec.space.boxes]\n",
-    "elif hasattr(action_spec, 'nvec'):\n",
-    "    # Standard MultiDiscrete\n",
-    "    action_dims = action_spec.nvec.tolist()\n",
-    "else:\n",
-    "    raise ValueError(f\"Unsupported action spec type: {type(action_spec)}\")"
+    "env.reset()"
    ]
   },
   {
@@ -380,6 +368,40 @@
     "Des scalaires dans R ou R+\n",
     "\n",
     "Des discrets qui peuvent être one hot encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a04da99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2]) torch.Size([2])\n",
+      "torch.Size([4, 2, 2]) torch.Size([4, 2, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from tensordict.nn.distributions import NormalParamExtractor\n",
+    "from torch import nn\n",
+    "module = nn.Linear(3, 4)\n",
+    "normal_params = NormalParamExtractor()\n",
+    "tensor = torch.randn(3)\n",
+    "loc, scale = normal_params(module(tensor))\n",
+    "print(normal_params(module(tensor)))\n",
+    "print(loc.shape, scale.shape)\n",
+    "assert (scale > 0).all()\n",
+    "# with modules that return more than one tensor\n",
+    "module = nn.LSTM(3, 4)\n",
+    "tensor = torch.randn(4, 2, 3)\n",
+    "loc, scale, others = normal_params(*module(tensor))\n",
+    "print(loc.shape, scale.shape)\n",
+    "assert (scale > 0).all()"
    ]
   }
  ],
